fixed wrap, link hover

--- a/src/styles/blocks/header/navigation.scss
+++ b/src/styles/blocks/header/navigation.scss
@@ -47,9 +47,7 @@
     }
     
     &:hover {
-      text-decoration: underline;
-      text-decoration-color: $text-color-blue;
-      text-decoration-thickness: 4px;
+      color: $text-color-blue;
     }
   }
 }
