--- a/src/styles/blocks/products-cards/card.scss
+++ b/src/styles/blocks/products-cards/card.scss
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 50px 40px 77px;
+  width: getWidthMain($card-width, $card-in-line, $margin);
+  margin: 50px auto 77px;
 }
 
 .products {
